fix: gap in form-inline

--- a/packages/ketchup/src/components/kup-input-panel/kup-input-panel.scss
+++ b/packages/ketchup/src/components/kup-input-panel/kup-input-panel.scss
@@ -140,5 +140,6 @@
   .input-panel-form--inline {
     display: flex;
     align-items: end;
+    gap: 1rem;
   }
 }
